--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 </head>
 
 <body>
-<div class='container'>
+<section class='container'>
   <p class="adviceID">Advice #<span></span></p>
 
   <p class="adviceText">"<span></span>"</p>
-  <button onclick="Advice()"><img src="./images/icon-dice.svg"/></button>
-</div>
+  <button onclick="Advice()"><p>Name</p><img src="./images/icon-dice.svg" alt="Generate new advice button"/></button>
+</section>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://YuriGuernsey.com">YuriGuernsey</a>.
